# faam-data

./: .gitignore  README.md  defaults.py  pyproject.toml  setup.py  vocal.yaml
attributes/: global_attributes.py  group_attributes.py  variable_attributes.py
docs/metadata/: conf.py  preproc.py
faam_data/: __init__.py  defaults.py  filecodec.py
faam_data/attributes/: constants.py  global_attributes.py  group_attributes.py  variable_attributes.py
faam_data/definitions/: core-cloud-phy_faam_YYYYmmdd_v001_rN_xNNN_cip100-1.yaml  core-cloud-phy_faam_YYYYmmdd_v001_rN_xNNN_cip100-2.yaml  core-cloud-phy_faam_YYYYmmdd_v001_rN_xNNN_cip15-1.yaml  core-cloud-phy_faam_YYYYmmdd_v001_rN_xNNN_cip15-2.yaml  core-cloud-phy_faam_YYYYmmdd_v001_rN_xNNN_cip25-1.yaml  core-cloud-phy_faam_YYYYmmdd_v602_rN_xNNN.yaml  core-cloud-phy_faam_YYYYmmdd_v700_rN_xNNN.yaml  core_faam_YYYYmmdd_v005_rN_xNNN.yaml  core_faam_YYYYmmdd_v005_rN_xNNN_1hz.yaml  faam-wxrx_YYYYmmdd_rN_xNNN_l0.yaml  faam_spif_CIP15-1.yaml  wxrx_faam_YYYYmmdd_v001_rN_xNNN.yaml
faam_data/models/: dataset.py  group.py  variable.py
faam_data/validators/: __init__.py  conventions.py  frequency.py  name_units.py  units.py
faam_data/vocabularies/: __init__.py  coverage_content.py
models/: dataset.py  group.py  variable.py
products/latest/: core_faam_YYYYmmdd_v005_rN_xNNN.json  core_faam_YYYYmmdd_v005_rN_xNNN_1hz.json  dataset_schema.json  faam-wxrx_YYYYmmdd_rN_xNNN_l0.json  wxrx_faam_YYYYmmdd_v001_rN_xNNN.json
products/v0.1/: core_faam_YYYYmmdd_v005_rN_xNNN.json  core_faam_YYYYmmdd_v005_rN_xNNN_1hz.json
products/v0.2/: core_faam_YYYYmmdd_v005_rN_xNNN.json  core_faam_YYYYmmdd_v005_rN_xNNN_1hz.json  dataset_schema.json  faam-wxrx_YYYYmmdd_rN_xNNN_l0.json
products/v0.3/: core_faam_YYYYmmdd_v005_rN_xNNN.json  core_faam_YYYYmmdd_v005_rN_xNNN_1hz.json  (+2 more)
(+28 files in other folders)
