[project]
name = "faam-data"
version = "0.5.0"
description = "Specification and documentation of FAAM data products"
authors = [{ name = "Dave Sproson", email = "dave.sproson@faam.ac.uk" }]
requires-python = "~=3.12"
readme = "README.md"
license = "Open Government Licence 3.0"
dependencies = [
    "sphinx>7",
    "sphinx-rtd-theme>=2,<3",
    "pydantic>=2.10.4,<3",
    "faam-vocal",
]

[dependency-groups]
dev = ["mypy>=1.14.1,<2"]

[tool.uv]

[tool.uv.sources]
faam-vocal = { git = "https://github.com/FAAM-146/vocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
