[project]
name = "faam-data"
version = "0.5.0"
description = "Specification and documentation of FAAM data products"
authors = [{ name = "Dave Sproson", email = "dave.sproson@faam.ac.uk" }]
requires-python = "~=3.12"
readme = "README.md"
license = "OGL-UK-3.0"
dependencies = [
    "sphinx>7",
    "pydantic>=2.10,<3",
    "faam-vocal",
    "sphinx-rtd-theme>=3.0.2",
]

[dependency-groups]
dev = ["mypy>=1.14.1,<2"]

[tool.uv]

[tool.uv.sources]
faam-vocal = { git = "https://github.com/FAAM-146/vocal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
